--- a/index.html
+++ b/index.html
@@ -2,80 +2,46 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>人民主義黨 People's Democracy Party</title>
     <style>
-        :root { --navy: #0f172a; --gold: #b45309; --slate: #f1f5f9; }
-        body { font-family: "PingFang TC", sans-serif; margin: 0; background: var(--slate); color: var(--navy); }
-        
-        /* CSS 黨徽：不需上傳圖檔 */
-        .pdp-logo {
-            width: 50px; height: 50px; background: #1a365d; border: 2px solid var(--gold);
-            border-radius: 50%; display: flex; align-items: center; justify-content: center;
-            color: white; font-weight: bold; font-size: 9px; text-align: center; margin-right: 12px;
-        }
-
-        nav { background: white; padding: 15px 8%; display: flex; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        
-        .hero { 
-            background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
-            padding: 100px 5%; color: white; text-align: center; border-bottom: 5px solid var(--gold);
-        }
-        .hero h1 { font-size: clamp(2rem, 6vw, 3.5rem); margin: 0; letter-spacing: 10px; }
-        .hero p { font-size: clamp(1rem, 3vw, 1.5rem); margin-top: 20px; letter-spacing: 5px; color: #94a3b8; }
-
-        .section { padding: 60px 8%; max-width: 1000px; margin: 0 auto; text-align: center; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 40px; }
-        .card { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-
-        footer { background: var(--navy); color: #475569; padding: 40px 0; text-align: center; }
-        /* 隱藏入口：這是一條極細的深色線 */
-        .secret-line { width: 40px; height: 1px; background: #1e293b; margin: 20px auto; cursor: default; }
+        :root { --pdp-navy: #0a192f; --pdp-gold: #c99a2e; }
+        body { font-family: sans-serif; margin: 0; background: #f4f7f9; color: var(--pdp-navy); text-align: center; }
+        header { background: var(--pdp-navy); color: white; padding: 80px 20px; border-bottom: 5px solid var(--pdp-gold); }
+        .hero h1 { font-size: 3.5rem; letter-spacing: 10px; margin: 0; }
+        .hero p { font-size: 1.5rem; letter-spacing: 5px; color: #cbd5e1; }
+        .content { padding: 60px 10%; line-height: 2.5; font-size: 1.3rem; }
+        footer { margin-top: 50px; padding: 20px; color: #ccc; font-size: 0.8rem; }
+        /* 隱藏通道：頁尾的點點 */
+        #gate { cursor: default; user-select: none; }
     </style>
 </head>
 <body>
 
-<nav>
-    <div class="pdp-logo">PEOPLE'S<br>DEMOCRACY</div>
-    <div>
-        <div style="font-weight: bold; font-size: 1.2rem;">人民主義黨</div>
-        <div style="font-size: 0.8rem; color: #64748b;">People's Democracy Party</div>
-    </div>
-</nav>
+<header>
+    <h1>人民主義 統一中國</h1>
+    <p>光復中華 保衛台灣</p>
+</header>
 
-<section class="hero">
-    <h1 id="main-slogan">人民主義 統一中國</h1>
-    <p id="sub-slogan">光復中華 保衛台灣</p>
-</section>
-
-<section class="section">
-    <h2>核心理念</h2>
-    <div class="grid">
-        <div class="card"><h3>人民做主</h3><p>權力回歸全體國民。</p></div>
-        <div class="card"><h3>人民權利</h3><p>捍衛法律賦予的尊嚴。</p></div>
-        <div class="card"><h3>人民平等</h3><p>消除分配不公與階級。</p></div>
-    </div>
-</section>
+<div class="content">
+    <p>本黨創立於中華民國一百一十四年五月二十七日。</p>
+    <p>核心理念：人民做主、人民權利、人民平等。</p>
+    <p>目前狀態：預備備案中。</p>
+</div>
 
 <footer>
-    <p>© 2026 People's Democracy Party</p>
-    <div class="secret-line" id="gate"></div>
+    © 2026 People's Democracy Party <span id="gate">.</span>
 </footer>
 
 <script>
-    // 進入隱藏頁面的密碼與邏輯
+    // 連點 5 下那個點，就會跳轉到你的編輯路徑
     let count = 0;
-    document.getElementById('gate').addEventListener('click', () => {
+    document.getElementById('gate').onclick = () => {
         count++;
-        if (count === 8) {
-            const key = prompt("Access Code:");
-            if (key === "1140527") {
-                // 跳轉至編輯頁 (我們等等會建立這個檔案)
-                window.location.href = "pdp_admin_manage.html"; 
-            }
+        if(count === 5) {
+            window.location.href = "./peopleparty/"; 
             count = 0;
         }
-    });
+    };
 </script>
 </body>
 </html>
