--- a/index.html
+++ b/index.html
@@ -2,34 +2,55 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <title>人民主義黨</title>
+    <title>人民主義黨 People's Democracy Party</title>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
     <style>
-        body { font-family: sans-serif; margin: 0; text-align: center; background: #f4f7f9; }
-        header { background: #0a192f; color: white; padding: 60px 20px; border-bottom: 5px solid #c99a2e; }
-        .hero h1 { font-size: 3.5rem; letter-spacing: 10px; }
-        .content { padding: 50px; font-size: 1.3rem; line-height: 2; }
-        #gate { color: #ccc; cursor: default; }
+        body { margin: 0; font-family: "PingFang TC", sans-serif; transition: background 0.5s; }
+        #render-container { min-height: 100vh; }
+        footer { text-align: center; padding: 20px; color: #999; font-size: 12px; background: rgba(0,0,0,0.05); }
+        #admin-gate { cursor: default; user-select: none; }
     </style>
 </head>
 <body>
-    <header>
-        <h1 id="t1">人民主義 統一中國</h1>
-        <p id="t2">光復中華 保衛台灣</p>
-    </header>
-    <div class="content" id="main-content">
-        本黨創立於中華民國一百一十四年五月二十七日。<br>
-        核心理念：人民做主、人民權利、人民平等。
-    </div>
-    <footer>© 2026 People's Democracy Party <span id="gate" onclick="goToEdit()">.</span></footer>
+
+    <div id="render-container">載入黨務資訊中...</div>
+
+    <footer>
+        © 2026 People's Democracy Party <span id="admin-gate">.</span>
+    </footer>
+
     <script>
-        // 載入儲存的內容
-        if(localStorage.getItem('pdp_html')) {
-            document.body.innerHTML = localStorage.getItem('pdp_html');
-        }
-        function goToEdit() {
-            let count = window.cnt || 0; count++; window.cnt = count;
-            if(count === 5) window.location.href = "./peopleparty/";
-        }
+        const firebaseConfig = {
+            apiKey: "AIzaSyDcBFGFQyBWg_tQMWmjmDNYZNDA9rSYvDA",
+            authDomain: "weifengtimer-c7af4.firebaseapp.com",
+            databaseURL: "https://weifengtimer-c7af4-default-rtdb.firebaseio.com", // 自動生成的資料庫網址
+            projectId: "weifengtimer-c7af4",
+            storageBucket: "weifengtimer-c7af4.firebasestorage.app",
+            appId: "1:632789560940:web:929ab9a06e6bfc8ecd7249"
+        };
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.database();
+
+        // 監聽雲端資料，有人編輯就會立刻變
+        db.ref('webContent').on('value', (snapshot) => {
+            const data = snapshot.val();
+            if (data) {
+                document.getElementById('render-container').innerHTML = data.html;
+                document.body.style.backgroundColor = data.bgColor || '#ffffff';
+            } else {
+                document.getElementById('render-container').innerHTML = "<h1 style='text-align:center;padding-top:100px;'>人民主義 統一中國</h1><p style='text-align:center;'>尚未發佈內容</p>";
+            }
+        });
+
+        // 隱藏進入點
+        let clicks = 0;
+        document.getElementById('admin-gate').onclick = () => {
+            clicks++;
+            if(clicks === 5) {
+                window.location.href = "./peopleparty/";
+            }
+        };
     </script>
 </body>
 </html>
