--- a/peopleparty/editor.html
+++ b/peopleparty/editor.html
@@ -2,23 +2,25 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <title>PDP 雲端編輯器</title>
+    <title>PDP 雲端指揮中心</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <style>
-        body { margin: 0; font-family: sans-serif; display: flex; flex-direction: column; height: 100vh; }
-        .toolbar { background: #111; color: #c99a2e; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; }
-        .save-btn { background: #c99a2e; border: none; padding: 8px 20px; font-weight: bold; cursor: pointer; border-radius: 4px; }
+        body { margin: 0; display: flex; flex-direction: column; height: 100vh; background: #f0f2f5; font-family: sans-serif; }
+        .nav { background: #1a202c; color: #c99a2e; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid #c99a2e; }
+        .save-btn { background: #c99a2e; border: none; padding: 10px 30px; font-weight: bold; cursor: pointer; border-radius: 5px; color: black; }
+        #editor-container { flex: 1; background: white; margin: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
     </style>
 </head>
 <body>
-    <div class="toolbar">
-        <b>PDP 雲端指揮中心 (已登入)</b>
-        <button class="save-btn" onclick="save()">發佈更新</button>
+    <div class="nav">
+        <b>人民主義黨 - 雲端指揮中心</b>
+        <button class="save-btn" onclick="save()">發佈更新 (同步全網)</button>
     </div>
-    <textarea id="myEditor"></textarea>
+    <div id="editor-container"></div>
 
     <script>
         const firebaseConfig = {
@@ -30,28 +32,31 @@
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
 
-        // 身份檢查
-        firebase.auth().onAuthStateChanged(user => {
-            if (!user) window.location.href = "index.html";
+        // 登入檢查
+        firebase.auth().onAuthStateChanged(user => { if (!user) window.location.href = "index.html"; });
+
+        // 初始化編輯器
+        var quill = new Quill('#editor-container', {
+            modules: { toolbar: [
+                [{ 'header': [1, 2, false] }],
+                ['bold', 'italic', 'underline', 'strike'],
+                [{ 'color': [] }, { 'background': [] }],
+                [{ 'align': [] }],
+                ['link', 'image', 'clean']
+            ]},
+            theme: 'snow'
         });
 
-        tinymce.init({
-            selector: '#myEditor',
-            height: '90vh',
-            plugins: 'lists link image table charmap textcolor colorpicker',
-            toolbar: 'undo redo | formatselect | bold italic forecolor backcolor | alignleft aligncenter alignright | bullist numlist | link image table'
-        });
-
-        // 載入資料
+        // 讀取現有內容
         db.ref('webContent').once('value').then(s => {
-            if(s.val()) tinymce.get('myEditor').setContent(s.val().html);
+            if(s.val()) quill.root.innerHTML = s.val().html;
         });
 
         function save() {
-            const html = tinymce.get('myEditor').getContent();
+            const html = quill.root.innerHTML;
             db.ref('webContent').set({ html })
-                .then(() => alert("✅ 儲存成功！"))
-                .catch(e => alert("錯誤：" + e.message));
+                .then(() => alert("✅ 發佈成功！現在所有人打開網頁都能看到更新了。"))
+                .catch(e => alert("錯誤：可能是規則沒設好 " + e.message));
         }
     </script>
 </body>
