--- a/peopleparty/index.html
+++ b/peopleparty/index.html
@@ -2,41 +2,37 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <title>黨務管理登入</title>
+    <title>管理員登入</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <style>
         body { background: #1a202c; color: white; font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-        .login-box { background: white; padding: 30px; border-radius: 8px; color: #333; width: 300px; text-align: center; }
-        input { width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
-        button { width: 100%; padding: 10px; background: #c99a2e; border: none; color: white; font-weight: bold; cursor: pointer; }
+        .login-card { background: white; padding: 40px; border-radius: 10px; color: #333; width: 100%; max-width: 320px; box-shadow: 0 10px 25px rgba(0,0,0,0.5); }
+        input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 5px; box-sizing: border-box; }
+        button { width: 100%; padding: 12px; background: #c99a2e; border: none; color: white; font-weight: bold; border-radius: 5px; cursor: pointer; }
     </style>
 </head>
 <body>
-    <div class="login-box" id="login-ui">
-        <h2>PDP 後台登入</h2>
+    <div class="login-card">
+        <h2 style="text-align:center; margin-top:0;">PDP 後台登入</h2>
         <input type="email" id="email" placeholder="電子郵件">
         <input type="password" id="password" placeholder="密碼">
-        <button onclick="login()">登入</button>
+        <button onclick="doLogin()">登入系統</button>
     </div>
 
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyDcBFGFQyBWg_tQMWmjmDNYZNDA9rSYvDA",
-            databaseURL: "https://weifengtimer-c7af4-default-rtdb.firebaseio.com",
             projectId: "weifengtimer-c7af4",
             appId: "1:632789560940:web:929ab9a06e6bfc8ecd7249"
         };
         firebase.initializeApp(firebaseConfig);
 
-        function login() {
+        function doLogin() {
             const e = document.getElementById('email').value;
             const p = document.getElementById('password').value;
             firebase.auth().signInWithEmailAndPassword(e, p)
-                .then(() => {
-                    // 登入成功，跳轉到編輯器頁面
-                    window.location.href = "editor.html";
-                })
+                .then(() => { window.location.href = "editor.html"; })
                 .catch(err => alert("登入失敗：" + err.message));
         }
     </script>
